k8s/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddd-foundation
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ddd-foundation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ddd-foundation
    spec:
      containers:
      - name: ddd-foundation
        image: ddd-foundation:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
